--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ flutter:
   
   assets:
     - assets/icons/arrow.png
+    - assets/icons/transparent_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
