--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,10 @@ name: bluesquares
 description: A new Flutter project.
 
 dependencies:
+
+  json_annotation: ^0.2.3
+
+
   flutter:
     sdk: flutter
 
@@ -10,6 +14,10 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+
+  build_runner: ^0.8.0
+  json_serializable: ^0.5.0
+
   flutter_test:
     sdk: flutter
 
